# price_updater

./: .gitignore  README.md  __main__.py  price_update.session  pyproject.toml  requirements.txt
models/: products.py
parser/: telegram.py
tasks/: credintials.json  google_config.py  google_sheet.py  gsheets.py  test.py
utils/: logger.py  timers.py
