[tool.poetry]
name = "price-updater"
version = "0.1.0"
description = ""
authors = ["Vankum100 <ivankumovich@gmail.com>"]
readme = "README.md"
packages = [{include = "price_updater"}]

[tool.poetry.dependencies]
python = "^3.11"
python-telegram-bot = "^20.2"
python-dotenv = "^1.0.0"
telethon = "^1.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
